--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "Simple PWA",
-    "short_name": "PWA",
+    "name": "Simple PWA by ~Srinivas",
+    "short_name": "SrinivasApp",
     "description": "A simple Progressive Web App example.",
-    "start_url": "/pwa/",
+    "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#00796b",
