--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
     "theme_color": "#00796b",
     "icons": [
         {
-            "src": "fav.png",
+            "src": "/fav.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "fav.png",
+            "src": "/fav.png",
             "sizes": "512x512",
             "type": "image/png"
         }
