--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Simple PWA by ~Srinivas",
     "short_name": "SrinivasApp",
     "description": "A simple Progressive Web App example.",
-    "start_url": "/index.html",
+    "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#00796b",
